implemented the search bar
